--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build-watch": "tsc -b -w",
     "build-spec": "tsc -b tsconfig-spec.json",
     "build:esm": "lerna exec --stream --parallel -- ../../node_modules/.bin/tsc --outDir lib/esm --module esnext --target esnext",
-    "build:clean": "rm -rf ./packages/*/lib && yarn build"
-
+    "build:clean": "rm -rf ./packages/*/lib && yarn build",
+    "ensure-dist": "lerna exec mkdirp dist"
   },
   "devDependencies": {
     "deepmerge" : "^4.2.2",
