--- a/package.json
+++ b/package.json
@@ -4,32 +4,38 @@
     "packages/*"
   ],
   "scripts": {
-    "config-update" : "npm-run-all --parallel package.json-update tsconfig-update tslint-update tsconfig-spec-update license-update",
-    "package.json-update" : "node merge.js package.base.json package.self.json package.json",
-    "tsconfig-update" : "node copy.js tsconfig.base.json tsconfig.json",
-    "tslint-update" : "node copy.js tslint.base.json tslint.json",
+    "installs" : "npm-run-all --serial bootstrap link",
+    "config-update" : "npm-run-all --parallel _package.json-update _tsconfig-update _tslint-update _tsconfig-spec-update _license-update _jasmine-update _jasmine-debug-update",
     "print-versions" : "node all-version.js",
-    "license-update" : "node copy.js LICENSE LICENSE",
-    "tsconfig-spec-update" : "node copy.js tsconfig-spec.base.json tsconfig-spec.json",
     "bootstrap" : "lerna bootstrap",
     "link" : "lerna link",
-    "spec-run": "lerna exec  -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope": "lerna exec --scope @alirya/boolean -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-scope": "lerna exec --scope @alirya/array -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "compile" : "lerna run compile --stream --parallel",
     "compile-watch" : "lerna run compile-watch --stream --parallel",
-    "compile-watch/value" : "lerna run compile-watch --stream --scope @alirya/value",
+    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/syslog",
     "spec-compile-watch" : "lerna run spec-compile-watch --stream --parallel",
+    "spec-compile-watch-scope" : "lerna run spec-compile-watch --stream --scope @alirya/koa",
     "doc-generate" : "lerna run doc-generate --stream --parallel",
 
     "lint": "lerna run lint --stream --parallel",
     "lint-fix": "lerna run lint-fix --stream --parallel",
 
     "spec-compile" : "lerna run spec-compile",
-    "aaa": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "build-watch": "tsc -b -w",
     "build-spec": "tsc -b tsconfig-spec.json",
     "build:esm": "lerna exec --stream --parallel -- ../../node_modules/.bin/tsc --outDir lib/esm --module esnext --target esnext",
     "build:clean": "rm -rf ./packages/*/lib && yarn build",
-    "ensure-dist": "lerna exec mkdirp dist"
+    "ensure-dist": "lerna exec mkdirp dist",
+    "_package.json-update" : "node merge.js package.base.json package.self.json package.json",
+    "_tsconfig-update" : "node copy.js tsconfig.base.json tsconfig.json",
+    "_jasmine-update" : "node copy.js jasmine.json jasmine.json",
+    "_jasmine-debug-update" : "node copy.js jasmine-debug.json jasmine-debug.json",
+    "_tslint-update" : "node copy.js tslint.base.json tslint.json",
+    "_license-update" : "node copy.js LICENSE LICENSE",
+    "_tsconfig-spec-update" : "node copy.js tsconfig-spec.base.json tsconfig-spec.json"
   },
   "devDependencies": {
     "deepmerge" : "^4.2.2",
