--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "link" : "lerna link",
     "spec-run": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug-scope": "lerna exec --scope @alirya/boolean -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-scope": "lerna exec --scope @alirya/array -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope-file": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/validator/record-key-all.spec.debug.js",
+    "spec-run-scope": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "compile" : "lerna run compile --stream --parallel",
     "compile-watch" : "lerna run compile-watch --stream --parallel",
-    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/syslog",
+    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/object",
     "spec-compile-watch" : "lerna run spec-compile-watch --stream --parallel",
     "spec-compile-watch-scope" : "lerna run spec-compile-watch --stream --scope @alirya/koa",
     "doc-generate" : "lerna run doc-generate --stream --parallel",
