--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "link" : "lerna link",
     "spec-run": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug-scope": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug-scope-file": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/validator/record-key-all.spec.debug.js",
-    "spec-run-scope": "lerna exec --scope @alirya/object -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope": "lerna exec --scope @alirya/uri -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope-file": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/middleware/error-handler/debug/server.spec.js",
+    "spec-run-scope": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "compile" : "lerna run compile --stream --parallel",
     "compile-watch" : "lerna run compile-watch --stream --parallel",
-    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/object",
+    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/koa",
     "spec-compile-watch" : "lerna run spec-compile-watch --stream --parallel",
     "spec-compile-watch-scope" : "lerna run spec-compile-watch --stream --scope @alirya/koa",
     "doc-generate" : "lerna run doc-generate --stream --parallel",
@@ -40,8 +40,6 @@
   },
   "devDependencies": {
     "deepmerge" : "^4.2.2",
-    "@types/jasmine": "^3.10.2",
-    "jasmine": "^3.10.0",
     "lerna": "^3.13.0",
     "tslint": "^5.13.0",
     "typescript": "^4.4.4",
