--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,5 @@
   "packages": ["packages/*"],
   "lerna": "2.11.0",
   "version": "3.0.2",
-  "npmClient": "yarn",
-  "useWorkspaces": true
+  "npmClient": "npm"
 }
