--- a/package.json
+++ b/package.json
@@ -1,49 +1,47 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "installs" : "npm-run-all --serial bootstrap link",
-    "config-update" : "npm-run-all --parallel _package.json-update _tsconfig-update _tslint-update _tsconfig-spec-update _license-update _jasmine-update _jasmine-debug-update",
-    "print-versions" : "node all-version.js",
-    "bootstrap" : "lerna bootstrap",
-    "link" : "lerna link",
+    "installs": "npm-run-all --serial bootstrap link",
+    "config-update": "npm-run-all --parallel _package.json-update _tsconfig-update _tslint-update _tsconfig-spec-update _license-update _jasmine-update _jasmine-debug-update",
+    "print-versions": "node all-version.js",
+    "bootstrap": "lerna bootstrap",
+    "link": "lerna link",
     "spec-run": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug-scope": "lerna exec --scope @alirya/uri -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug-scope-file": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/middleware/error-handler/debug/server.spec.js",
     "spec-run-scope": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
-    "compile" : "lerna run compile --stream --parallel",
-    "compile-watch" : "lerna run compile-watch --stream --parallel",
-    "compile-watch-scope" : "lerna run compile-watch --stream --scope @alirya/koa",
-    "spec-compile-watch" : "lerna run spec-compile-watch --stream --parallel",
-    "spec-compile-watch-scope" : "lerna run spec-compile-watch --stream --scope @alirya/koa",
-    "doc-generate" : "lerna run doc-generate --stream --parallel",
-
+    "compile": "lerna run compile --stream --parallel",
+    "compile-watch": "lerna run compile-watch --stream --parallel",
+    "release": "lerna run --no-bail release",
+    "release-scope": "lerna run --scope @alirya/message --stream release",
+    "compile-watch-scope": "lerna run compile-watch --stream --scope @alirya/koa",
+    "spec-compile-watch": "lerna run spec-compile-watch --stream --parallel",
+    "spec-compile-watch-scope": "lerna run spec-compile-watch --stream --scope @alirya/koa",
+    "doc-generate": "lerna run doc-generate --stream --parallel",
     "lint": "lerna run lint --stream --parallel",
     "lint-fix": "lerna run lint-fix --stream --parallel",
-
-    "spec-compile" : "lerna run spec-compile",
+    "spec-compile": "lerna run spec-compile",
     "build-watch": "tsc -b -w",
     "build-spec": "tsc -b tsconfig-spec.json",
     "build:esm": "lerna exec --stream --parallel -- ../../node_modules/.bin/tsc --outDir lib/esm --module esnext --target esnext",
     "build:clean": "rm -rf ./packages/*/lib && yarn build",
     "ensure-dist": "lerna exec mkdirp dist",
-    "_package.json-update" : "node merge.js package.base.json package.self.json package.json",
-    "_tsconfig-update" : "node copy.js tsconfig.base.json tsconfig.json",
-    "_jasmine-update" : "node copy.js jasmine.json jasmine.json",
-    "_jasmine-debug-update" : "node copy.js jasmine-debug.json jasmine-debug.json",
-    "_tslint-update" : "node copy.js tslint.base.json tslint.json",
-    "_license-update" : "node copy.js LICENSE LICENSE",
-    "_tsconfig-spec-update" : "node copy.js tsconfig-spec.base.json tsconfig-spec.json"
+    "_package.json-update": "node merge.js package.base.json package.self.json package.json",
+    "_tsconfig-update": "node copy.js tsconfig.base.json tsconfig.json",
+    "_jasmine-update": "node copy.js jasmine.json jasmine.json",
+    "_jasmine-debug-update": "node copy.js jasmine-debug.json jasmine-debug.json",
+    "_tslint-update": "node copy.js tslint.base.json tslint.json",
+    "_license-update": "node copy.js LICENSE LICENSE",
+    "_tsconfig-spec-update": "node copy.js tsconfig-spec.base.json tsconfig-spec.json"
   },
   "devDependencies": {
-    "deepmerge" : "^4.2.2",
+    "deepmerge": "^4.2.2",
     "lerna": "^3.13.0",
     "tslint": "^5.13.0",
     "typescript": "^4.4.4",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "npm-run-all": "^4.1.5"
   },
   "license": "Apache-2.0"
 }
