--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "build:esm": "lerna exec --stream --parallel -- ../../node_modules/.bin/tsc --outDir lib/esm --module esnext --target esnext",
     "build:clean": "rm -rf ./packages/*/lib && yarn build",
     "ensure-dist": "lerna exec mkdirp dist",
+    "update-cross-dependency": "npm-run-all _update-cross-dependency _package.json-update",
+    "_update-cross-dependency": "node update-dependencies.js",
     "_package.json-update": "node merge.js package.base.json package.self.json package.json",
     "_tsconfig-update": "node copy.js tsconfig.base.json tsconfig.json",
     "_jasmine-update": "node copy.js jasmine.json jasmine.json",
