--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "tslint": "^5.13.0",
     "typescript": "^4.4.4",
     "glob": "^7.2.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "jasmine": "=3.10.0",
+    "jasmine-ts-console-reporter": "^3.1.1"
   },
   "license": "Apache-2.0"
 }
