--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug-scope": "lerna exec --scope @alirya/uri -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
     "spec-run-debug-scope-file": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/middleware/error-handler/debug/server.spec.js",
-    "spec-run-scope": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-scope": "lerna exec --scope @alirya/score -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "compile": "lerna run compile --stream --parallel",
     "compile-watch": "lerna run compile-watch --stream --parallel",
+    "compile-watch-scope": "lerna run compile-watch --stream --scope @alirya/score",
     "release": "lerna run --no-bail release",
-    "release-scope": "lerna run --scope @alirya/message --stream release",
-    "compile-watch-scope": "lerna run compile-watch --stream --scope @alirya/koa",
+    "release-scope": "lerna run --scope @alirya/score --stream release",
     "spec-compile-watch": "lerna run spec-compile-watch --stream --parallel",
-    "spec-compile-watch-scope": "lerna run spec-compile-watch --stream --scope @alirya/koa",
+    "spec-compile-watch-scope": "lerna run spec-compile-watch --stream --scope @alirya/score",
     "doc-generate": "lerna run doc-generate --stream --parallel",
     "lint": "lerna run lint --stream --parallel",
     "lint-fix": "lerna run lint-fix --stream --parallel",
