--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "deepmerge": "^4.2.2",
-    "lerna": "^4.0.0",
+    "lerna": "=3.22.1",
     "tslint": "^5.13.0",
     "typescript": "^4.4.4",
     "glob": "^7.2.0",
