--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "packages/proxy"]
 	path = packages/proxy
 	url = https://github.com/alirya/proxy
+[submodule "packages/score"]
+	path = packages/score
+	url = https://github.com/alirya/score
