--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "packages/monorepo"]
 	path = packages/monorepo
 	url = https://github.com/alirya/monorepo
+[submodule "packages/filesystem"]
+	path = packages/filesystem
+	url = https://github.com/alirya/filesystem
