--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@alirya/monorepo": "^0.3.1",
+    "deepmerge": "^4.2.2",
+    "lerna": "^5.1.8",
+    "tslint": "^5.13.0",
+    "typescript": "^4.4.4",
+    "glob": "^7.2.0",
+    "npm-run-all": "^4.1.5",
+    "jasmine": "=3.10.0",
+    "jasmine-ts-console-reporter": "^3.1.1",
+    "esm": "^3.2.25"
+  },
   "private": true,
   "scripts": {
     "bootlink": "npm-run-all --serial bootstrap link",
@@ -40,18 +53,5 @@
     "_tsconfig-update": "node -r esm update-tsconfig.js",
     "_package-update": "node -r esm update-package.js",
     "_update-peer-dependency": " node -r esm update-peer-dependency.js"
-  },
-  "devDependencies": {
-    "@alirya/monorepo": "^0.2.0",
-    "deepmerge": "^4.2.2",
-    "lerna": "^5.1.8",
-    "tslint": "^5.13.0",
-    "typescript": "^4.4.4",
-    "glob": "^7.2.0",
-    "npm-run-all": "^4.1.5",
-    "jasmine": "=3.10.0",
-    "jasmine-ts-console-reporter": "^3.1.1",
-    "esm": "^3.2.25"
-  },
-  "license": "Apache-2.0"
+  }
 }
