--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "license": "Apache-2.0",
   "devDependencies": {
-    "@alirya/monorepo": "^0.3.2",
+    "@axiona/monorepo": "^0.3.2",
     "deepmerge": "^4.2.2",
-    "lerna": "^3.22.1",
+    "lerna": "^6.4.1",
     "tslint": "^5.13.0",
     "typescript": "^4.4.4",
     "glob": "^7.2.0",
@@ -18,21 +18,21 @@
     "config-update": "npm-run-all --serial _package-update _tsconfig-update _tslint-update _tsconfig-spec-update _license-update _jasmine-update _jasmine-debug-update",
     "print-versions": "node -r esm version.js",
     "bootstrap": "lerna bootstrap",
-    "bootstrap-scope": "lerna bootstrap --scope @alirya/iterable",
+    "bootstrap-scope": "lerna bootstrap --scope @axiona/iterable",
     "installs": "lerna exec  -- npm install",
     "link": "lerna link",
     "spec-run": "lerna run spec-run --stream --no-bail",
     "spec-run-debug": "lerna exec -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug-scope": "lerna exec --scope @alirya/uri -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug-scope-file": "lerna exec --scope @alirya/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/middleware/error-handler/debug/server.spec.js",
-    "spec-run-scope": "lerna exec --scope @alirya/score -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope": "lerna exec --scope @axiona/uri -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug-scope-file": "lerna exec --scope @axiona/koa -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter dist-spec/middleware/error-handler/debug/server.spec.js",
+    "spec-run-scope": "lerna exec --scope @axiona/score -- node -r esm ../../node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "compile": "lerna run compile --stream --parallel",
     "compile-watch": "lerna run compile-watch --stream --parallel",
-    "compile-watch-scope": "lerna run compile-watch --stream --scope @alirya/score",
+    "compile-watch-scope": "lerna run compile-watch --stream --scope @axiona/score",
     "release": "lerna run --no-bail release",
-    "release-scope": "lerna run --scope @alirya/score --stream release",
+    "release-scope": "lerna run --scope @axiona/score --stream release",
     "spec-compile-watch": "lerna run spec-compile-watch --stream --parallel",
-    "spec-compile-watch-scope": "lerna run spec-compile-watch --stream --scope @alirya/score",
+    "spec-compile-watch-scope": "lerna run spec-compile-watch --stream --scope @axiona/score",
     "doc-generate": "lerna run doc-generate --stream --parallel",
     "git-tag": "lerna run git-tag --no-bail",
     "git-tag-push": "lerna run git-tag-push --no-bail",
@@ -49,6 +49,7 @@
     "_jasmine-update": "node -r esm update-jasmine.js",
     "_jasmine-debug-update": "node -r esm update-jasmine-debug.js",
     "_tslint-update": "node -r esm update-tslint.js",
+    "_fix-import-extension": "node -r esm fix-import-path.js",
     "_tsconfig-spec-update": "node -r esm update-tsconfig-spec.js",
     "_tsconfig-update": "node -r esm update-tsconfig.js",
     "_package-update": "node -r esm update-package.js",
